# notify-osd-customizable

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in  notify-osd2.patch
data/: Makefile.am  com.canonical.NotifyOSD.gschema.xml  notify-osd.convert  org.freedesktop.Notifications.service.in
data/icons/: Makefile.am
data/icons/scalable/: Makefile.am  README
debian/: changelog  control  copyright  notify-osd.install  notify-osd.postrm  notify-osd.preinst  rules
egg/: egg-alpha.c  egg-alpha.h  egg-debug.h  egg-fixed.c  egg-fixed.h  egg-hack.c  egg-hack.h  egg-timeline.c  egg-timeline.h  egg-timeout-pool.c  egg-timeout-pool.h  egg-units.c  egg-units.h  test-timeline-dup-frames.c  test-timeline-interpolate.c  test-timeline-rewind.c  test-timeline-smoothness.c  test-timeline.c
examples/: Makefile.am  append-hint-example.c  append-hint-example.cs  append-hint-example.py  example-util.c  example-util.cs  example-util.h  icon-only.c  icon-only.cs  icon-only.py  icon-summary-body.c  icon-summary-body.cs  icon-summary-body.py  icon-summary.c  icon-summary.cs  icon-summary.py  icon-updating.c  icon-value.c  icon-value.cs  icon-value.py  low-urgency.py  normal-urgency.py  summary-body.c  summary-body.cs  summary-body.py  summary-only.c  summary-only.cs  summary-only.py  sync-icon-only.c  sync-icon-only.cs  sync-icon-only.py  update-notifications.c  update-notifications.cs  update-notifications.py  urgent-urgency.py
src/: Makefile.am  apport.c  apport.h  bubble-window-accessible-factory.c  bubble-window-accessible-factory.h  bubble-window-accessible.c  bubble-window-accessible.h  bubble-window.c  bubble-window.h  bubble.c  bubble.h  dbus.c  dbus.h  defaults.c  defaults.h  dialog.c  dialog.h  display.c  dnd.c  dnd.h  gaussian-blur.c  log.c  log.h  main.c  notification.c  notification.h  notify-osd.xml  observer.c  observer.h  send-test-notification.sh  stack.c  stack.h  tile.c  tile.h  timings.c  timings.h  util.c  util.h
tests/: Makefile.am  notifyosd.py  test-alpha-animation.c  test-apport.c  test-bubble.c  test-dbus.c  test-defaults.c  test-dnd.c  test-grow-bubble.c  test-i18n.c  test-modules-main.c  test-notification.c  test-observer.c  test-raico.c  test-scroll-text.c  test-stack.c  test-synchronous.c  test-text-filtering.c  test-tile.c  test-timings.c  test-withlib.c
