iconsdir = $(pkgdatadir)/icons/hicolor/scalable/status

icons_DATA =  \
	README \
	notification-audio-next.svg \
	notification-audio-play.svg \
	notification-audio-previous.svg \
	notification-audio-volume-high.svg \
	notification-audio-volume-low.svg \
	notification-audio-volume-medium.svg \
	notification-audio-volume-muted.svg \
	notification-audio-volume-off.svg \
	notification-battery-low.svg \
	notification-device-eject.svg \
	notification-device.svg \
	notification-display-brightness.svg \
	notification-keyboard-brightness.svg \
	notification-message-email.svg \
	notification-message-im.svg \
	notification-network-ethernet-connected.svg \
	notification-network-ethernet-diconnected.svg \
	notification-network-wireless.svg \
	notification-power.svg

EXTRA_DIST = $(icons_DATA)

